# pm-hftbacktest

./: LICENSE  README.rst
.github/workflows/: release-python.yml
docs/: index.rst
example/: Data Preparation.ipynb  Getting Started.ipynb  endline.ipynb  reverse.ipynb
hftbacktest/examples/: 1_ticker.py
py-hftbacktest/: README.md  pyproject.toml
py-hftbacktest/hftbacktest/: __init__.py
py-hftbacktest/hftbacktest/data/utils/: polymarket.py
py-hftbacktest/hftbacktest/stats/: __init__.py  stats.py
py-hftbacktest/tests/: test_hftbacktest.py
