[build-system]
requires = ["maturin~=1.7"]
build-backend = "maturin"

[project]
name = "pm-hftbacktest"
description = "A polymarket high-frequency trading and market-making backtesting tool"
readme = "README.rst"
authors = [{ name = "mileswangs", email = "wangshuosum@gmail.com" }]
license = { file = "LICENSE" }
version = "1.0.6"
requires-python = ">=3.11"
dependencies = [
 "numpy >=2.0, <2.3",
 "numba ~= 0.61",
 "polars",
 "requests",
 "matplotlib",
 "holoviews"
]

keywords = ["hft", "high-frequency trading", "trading", "market-making", "backtest"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Jupyter",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Topic :: Office/Business :: Financial :: Investment"
]

[project.optional-dependencies]
databento = ["databento"]

[tool.maturin]
include = [{ path = "rust-toolchain.toml", format = "sdist" }]
module-name = "hftbacktest._hftbacktest"
